[tool.poetry]
name = "ham_tools"
version = "0.1.0"
description = "Various amateur radio tools"
authors = ["Nick Pegg <nick@nickpegg.com>"]
license = "MIT"

[tool.poetry.scripts]
ft991a = 'ham_tools.ft991a:main'

[tool.poetry.dependencies]
python = ">=3.8.0"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
